<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.cristian.appgym.ui.fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitleRS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlePrincipalWindow"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/formContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleRS"
            app:layout_constraintWidth_percent="0.85">

            <TextView
                android:id="@+id/tvNameSS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvName"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etNameSS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNameSS" />

            <TextView
                android:id="@+id/tvLastNameSS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvLastName"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNameSS" />

            <EditText
                android:id="@+id/etLastNameSS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastNameSS" />

            <TextView
                android:id="@+id/tvEmailSS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEmail"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLastNameSS" />

            <EditText
                android:id="@+id/etEmailSS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmailSS" />

            <TextView
                android:id="@+id/tvUsernameSS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvUser"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmailSS" />

            <EditText
                android:id="@+id/etUsernameSS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUsernameSS" />

            <TextView
                android:id="@+id/tvPassSS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvContra"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etUsernameSS" />

            <EditText
                android:id="@+id/etPasswordSS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPassSS" />

            <TextView
                android:id="@+id/tvDdateofBirthSS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvDate"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPasswordSS" />

            <EditText
                android:id="@+id/etDateSS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/etDate"
                android:inputType="none"
                android:textSize="14sp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDdateofBirthSS" />

            <TextView
                android:id="@+id/tvSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGroup"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDateSS" />

            <RadioGroup
                android:id="@+id/rgSexSS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSex">

                <RadioButton
                    android:id="@+id/rbtnMale"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnMale" />

                <RadioButton
                    android:id="@+id/rbtnFemale"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnFemale" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegisterSS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawableLeft="@drawable/persona_login"
                android:text="@string/btnRegistrar"
                style="@style/Button.AppGym.Primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgSexSS" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBackSS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:drawableLeft="@drawable/home"
                android:text="@string/btnVolver"
                style="@style/Button.AppGym.Secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegisterSS" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>