<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.cristian.appgym.ui.fragments.LoginFragment">


    <!-- Guideline vertical al 20% -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/tvTitleLoginS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlePrincipalWindow"
        style="@style/Title.AppGym"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />


    <!-- Guideline vertical al 30% -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <!-- Label Usuario -->
    <TextView
        android:id="@+id/tvUsernameLoginS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/tvUser"
        style="@style/Text.AppGym.Subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_mid" />

    <!-- Campo Usuario -->
    <EditText
        android:id="@+id/etUsernameLoginS"
        style="@style/EditText.AppGym"
        android:inputType="text"
        android:hint="@string/hint_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvUsernameLoginS" />

    <!-- Label Contraseña -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:text="@string/tvContra"
        style="@style/Text.AppGym.Subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etUsernameLoginS" />

    <!-- Campo Contraseña -->
    <EditText
        android:id="@+id/etPassLoginS"
        style="@style/EditText.AppGym"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView2" />

    <!-- Guideline vertical al 75% -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginLoginS"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/persona_login"
        android:text="@string/btnLogin"
        style="@style/Button.AppGym.Primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_bot" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHomeLoginS"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:drawableLeft="@drawable/home"
        android:text="@string/btnVolver"
        style="@style/Button.AppGym.Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnLoginLoginS" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>